<resources>
    <string name="app_name">OshoDarshan</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_search">Search</string>
    <string name="title_clear">Clear</string>

    <string name="title_quote">Quotes</string>
    <string name="title_about">About</string>
    <string name="search_hint">Type here</string>
    <string name="english">English</string>
    <string name="hindi">Hindi</string>
    <string name="topic_to_search_about">Topic to search about</string>
    <string name="text_data">Album title</string>
    <string name="text_download">Download url</string>
    <string name="text_number">0</string>
    <string name="quote_demo">Creativity is the greatest rebellion in the face of orthodoxy.</string>

    <string name="download_btn">Download</string>
</resources>